syntax = "proto3";

package rpcapi;

message KeyValue {
	string Key = 1;
	string Value = 2;
	bool Found = 3;
}

message Empty {}

message KeyReq {
	repeated string Keys = 1;
}

message MoveReq{
	repeated KeyList KL = 1;
}

message KeyList{
	NodeMeta Node = 1;
	repeated string Keys = 2;
}

message NodeMetas {
	repeated NodeMeta Metas = 1;
}

message NodeMeta {
	string ID = 1;
	string Address = 2;
	string RPCAddress = 3;
	double Power = 4;
	double Capacity = 6;
	HealthCheck Check = 7;
	GeoData Geo = 8;
}

message HealthCheck {
	string Timeout = 1;
	string DeregisterCriticalServiceAfter = 2;
}

message GeoData{
	double Longitude = 1;
	double Latitude = 2;
}

message ExploreRes {
	repeated string Keys = 1;
}

message KeyValues {
	repeated KeyValue KVs = 1;
}

message Capacity {
	double Capacity = 1;
}

service RPCNode {
	rpc RPCStore (KeyValue) returns (DataItem);
	rpc RPCStorePairs (KeyValues) returns (DataItems);
	rpc RPCReceive (KeyReq) returns (KeyValues);
	rpc RPCRemove (KeyReq) returns (DataItem);
	rpc RPCExplore (Empty) returns (ExploreRes);
	rpc RPCMeta (Empty) returns (NodeMeta);
	rpc RPCMove (MoveReq) returns (Empty);
//	rpc RPCCapacity (Empty) returns (Capacity);
}

service RPCCapacity {
	rpc RPCGet (Empty) returns (Capacity);
}

service RPCBalancer {
	rpc RPCRegister (NodeMeta) returns (Empty);
	rpc RPCHeartbeat (Ping) returns (Empty);
}

message Ping {
	string NodeID = 1;
}

message DataItems {
	repeated DataItem DIs = 1;
}

message DataItem {
	string ID = 1;
	uint64 Size = 2;
	GeoData Geo = 3;
}